--- a/BeatDetectionFinal.ipynb
+++ b/BeatDetectionFinal.ipynb
@@ -22,7 +22,7 @@
     "import scipy.signal as sig\n",
     "import time\n",
     "import timeit\n",
-    "import neopixels\n",
+    "#import neopixels\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from IPython.display import Audio\n",
