--- a/README
+++ b/README
@@ -4,5 +4,5 @@ Steps to run the code
 3. Run all cells. 
 4. Scroll down to the "Running the Program with GUI" section
 5. Follow the instructions there. 
-6. For any music in the Music_database/'FILENAME.wav', you need to ask us for the wav files, which could not be uploaded here. Shoot us an email and we'll send you the zip.
+6. For any music in the Music_database/'FILENAME.wav', you need to ask us for the wav files, which could not be uploaded here or in Devpost. Shoot us an email and we'll send you the zip.
 7. When you do receive the zip file, unzip, and name the folder "Music_database" and put it in the same directory as the notebook
