--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Steps to run the code
-1. Download the Jupyter notebook.
+1. Download the Jupyter notebook, Tree1.png, and Tree2.png.
 2. The first cell should contain instructions for any additional module that may require installation. Terminal commands are provided in the comments
 3. Run all cells. 
 4. Scroll down to the "Running the Program with GUI" section
